testdata/ttcn3-conformance-tests/ATS/core_language/06_types_and_values/0602_structured_types_and_values/060204_enumerated_type_and_values/NegSyn_060204_enumerated_type_and_values_004.ttcn
/***************************************************
 ** @author   STF 521
 ** @version  0.0.1
 ** @purpose  1:6.2.4, expression as user-assigned enumerated value
 ** @verdict  pass reject, noexecutino
 ***************************************************/

// The following requirement is tested:
// ach enumerated value may optionally have a user-assigned integer value or non-empty list of integer literal values or ranges of integer literal values

module NegSyn_060204_enumerated_type_and_values_004 {

    type enumerated MyFirstEnumType {
        Monday, Tuesday(), Thursday, Friday
    };    // error: non-empty integer literal required
}
